--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE=mongodb+srv://avanibaheti7:12345@cluster0.f5vjnzh.mongodb.net/USERDB?retryWrites=true&w=majority
+DATABASE=mongodb+srv://avanibaheti7:<Password>@cluster0.f5vjnzh.mongodb.net/?retryWrites=true&w=majority
